# sudoku

./: .gitignore  Dockerfile  README.md  docker-compose.yml  k8test.yaml
.bsp/: sbt.json
cuda-lib/: Makefile  README.md  sudoku_puzzle_gpu.cu
cudalang/: Makefile  README.md  result-speed-test.txt  sample_sudokus.csv  sudoku.txt  sudoku_puzzle_gpu.cu
golang/: go.mod  golang  sudoku_bit_set.go  sudoku_constants.go  sudoku_puzzle.go  sudoku_solver  sudoku_solver.go  sudoku_solver_test.go
golang/algo/: sudoku_bit_set.go  sudoku_bit_set_test.go  sudoku_constants.go  sudoku_puzzle.go  sudoku_puzzle_test.go
golang/io/: sudoku_io.go  sudoku_io_test.go  sudoku_iterator.go
golang/src/: go.mod  sudoku_solver.go
golang/src/algo/: sudoku_puzzle.go
golang/src/io/: sudoku_iterator.go
golang/src/test/: sudoku_bit_set.go
performance/: prepare_data.sc  prepare_data.sh  test.sh
performance/compare_v1-v3/: mem.csv  time.csv
performance/version_0.1-result/: mem.csv  time.csv
performance/version_0.2-result/: mem.csv  time.csv
performance/version_0.3-result/cpu-1/: mem.csv  time.csv
performance/version_0.3-result/cpu-all/: mem.csv  time.csv
performance/version_0.4-result/: mem.csv  time.csv
performance/version_0.5-result/: mem.csv  time.csv
performance/version_0.6-result/: mem.csv  time.csv
performance/version_0.7-result/: mem.csv  time.csv
performance/version_0.8-result/: mem.csv  time.csv
performance/version_0.9-result/: mem.csv  time.csv
performance/version_1.0-result/: mem.csv  time.csv
performance/version_1.0.1-result/: mem.csv  time.csv
performance/version_1.0.2_result/: mem.csv  time.csv
rustlang/: Cargo.toml  Makefile  README.md  build.rs  dummyCheck.txt  test.sh
rustlang/lib/: README.md
rustlang/src/de/fmantz/sudoku/: main.rs  sudoku_bench.rs  sudoku_bit_set.rs  sudoku_constants.rs  sudoku_io.rs  sudoku_iterator.rs  sudoku_puzzle.rs  sudoku_puzzle_gpu.cu  sudoku_solver.rs  sudoku_turbo.rs
rustlang/test/resources/: SOLUTION_one_sudoku.txt  SOLUTION_two_sudoku.txt  sudoku.txt
scalalang/: README.md  build.sbt  build.sc  test.sh
scalalang/project/: plugins.sbt
scalalang/src/de/fmantz/sudoku/: SudokuConstants.scala
scalalang/src/main/resources/: p096_sudoku.txt
scalalang/src/test/resources/: SOLUTION_one_sudoku.txt  p096_sudoku.txt
scalalang/test/resources/: one_sudoku.txt  sudoku.txt
scalalang/test/src/de/fmantz/sudoku/: SudokuBitSet.scala  (+1 more)
(+14 files in other folders)
